--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ts-cli_test",
-  "version": "1.0.0",
-  "description": "ts-cli test repository",
+  "name": "ex-cli",
+  "version": "0.0.1",
+  "description": "express-cli project",
   "main": "./lib/index.js",
   "bin": {
-    "ex-cli": "./lib/index.js"
+    "ex-cli": "lib/index.js"
   },
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
@@ -12,7 +12,7 @@
     "build": "tsc -p .",
     "local": "sudo npm i -g && ex-cli",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
-    "debug" : "npm run create && npm run local"
+    "debug": "npm run create && npm run local"
   },
   "author": "whiteb",
   "license": "MIT",
@@ -29,5 +29,23 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
-  }
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/minsoo0715/express-cli.git"
+  },
+  "keywords": [
+    "typescript",
+    "express",
+    "nodejs",
+    "cli"
+  ],
+  "bugs": {
+    "url": "https://github.com/minsoo0715/express-cli/issues"
+  },
+  "homepage": "https://github.com/minsoo0715/express-cli#readme"
 }
