--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minsoo0715/ex-cli",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "express template generating CLI project",
   "main": "./lib/index.js",
   "bin": {
@@ -26,9 +26,10 @@
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
+    "@types/shelljs": "^0.8.11",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "directories": {
     "lib": "lib"
